name:                rasa
version:             0.1.0.0
synopsis:            A modular text editor
description:         A modular text editor
homepage:            https://github.com/ChrisPenner/rasa#readme
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Text Editor
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:
                       Buffer
                       View
                       Utils

  exposed-modules:
                       Editor
                       Event
                       TextLens
                       VtyAdapter
                       Directive
                       Alteration

                       Config
                       ConfigState
                       Ext.Vim
                       Ext.Vim.State
                       Ext.Files
                       Ext.Utils

  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , data-default
                     , vty
                     , mtl
                     , extra
                     , containers
                     , filepath
  default-language:    Haskell2010

  default-extensions:  TemplateHaskell
                       OverloadedStrings

  ghc-options:         -Wall -fno-warn-orphans

executable rasa-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rasa
                     , text
                     , lens
                     , data-default
                     , vty
                     , mtl
  default-language:    Haskell2010

test-suite rasa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TextLensTest
  build-depends:       base
                     , rasa
                     , hspec
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
