name:                rasa-adapter
version:             0.1.0.0
synopsis:            Lib for developing rendering adapters for rasa
description:         Lib for developing rendering adapters for rasa
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Adapter

  build-depends:       base >= 4.7 && < 5
                     , rasa-core
                     , lens
                     , text
                     , text-lens
                     , mtl
                     , extra
  default-language:    Haskell2010

  default-extensions:  OverloadedStrings

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
