name:                rasa-core
version:             0.1.0.0
synopsis:            Base Rasa Lib
description:         Base Rasa Lib
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Editor
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Alteration
                       Rasa.Buffer
                       Rasa.Events
                       Rasa.Editor
                       Rasa.Attributes
                       Rasa.State

  build-depends:       base >= 4.7 && < 5
                     , text
                     , text-lens
                     , lens
                     , mtl
                     , containers
                     , transformers
                     , data-default
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
