name:                rasa-example-config
version:             0.1.0.0
synopsis:            Example user config for Rasa
description:         Example user config for Rasa
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Config
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable rasa
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , rasa-ext-vim
                     , rasa-ext-style
                     , rasa-ext-cursors
                     , rasa-ext-status-bar
                     , rasa-ext-logger
                     , rasa-ext-files
                     , rasa-ext-slate
                     , lens
                     , mtl
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
