name:                rasa-ext-bufs
version:             0.1.1
synopsis:            Rasa Ext for useful buffer utilities
description:         Rasa Ext for useful buffer utilities
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Ext.Bufs

  build-depends:       base >= 4.8 && < 5
                     , rasa
                     , data-default
                     , lens
                     , text
                     , containers
  default-language:    Haskell2010

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
