name:                rasa-ext-cmd
version:             0.1.0.0
synopsis:            Rasa Ext for running commands
description:         Rasa Ext for running commands
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Ext.Cmd

  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , data-default
                     , lens
                     , text
                     , containers
  default-language:    Haskell2010

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
