name:                rasa-ext-cursors
version:             0.1.0.0
synopsis:            Rasa Ext adding cursor(s)
description:         Rasa Ext adding cursor(s)
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Cursors
  build-depends:       base >= 4.7 && < 5
                     , rasa-ext
                     , lens
  default-language:    Haskell2010

  default-extensions:  OverloadedStrings

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
