name:                rasa-ext-cursors
version:             0.1.4
synopsis:            Rasa Ext adding cursor(s)
description:         Rasa Ext adding cursor(s)
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Cursors
                       Rasa.Ext.Cursors.Internal.Actions
                       Rasa.Ext.Cursors.Internal.Base
  build-depends:       base >= 4.8 && < 5
                     , rasa
                     , rasa-ext-style
                     , text-lens
                     , lens
                     , mtl
                     , text
                     , yi-rope
                     , data-default
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
