name:                rasa-ext-files
version:             0.1.0.0
synopsis:            Rasa Ext for filesystem actions
description:         Rasa Ext for filesystem actions
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Ext.Files

  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , rasa-ext-status-bar
                     , rasa-ext-cmd
                     , data-default
                     , lens
                     , text
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
