name:                rasa-ext-files
version:             0.1.5
synopsis:            Rasa Ext for filesystem actions
description:         Rasa Ext for filesystem actions
homepage:            https://github.com/ChrisPenner/rasa/
license:             GPL-3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Ext.Files
                       Rasa.Ext.Files.Internal.Events

  build-depends:       base >= 4.8 && < 5
                     , rasa
                     , rasa-ext-views
                     , rasa-ext-cmd
                     , data-default
                     , lens
                     , text
                     , mtl
                     , yi-rope
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
