name:                rasa-ext-slate
version:             0.1.0.0
synopsis:            Rasa extension for rendering to terminal with vty
description:         Rasa extension for rendering to terminal with vty
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Renderer.Slate
  other-modules:
                       Rasa.Renderer.Slate.Render
                       Rasa.Renderer.Slate.Event
                       Rasa.Renderer.Slate.State
                       Rasa.Renderer.Slate.Attributes

  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , rasa-ext-style
                     , rasa-ext-status-bar
                     , text
                     , yi-rope
                     , lens
                     , vty >= 5.14
                     , rasa-ext-logger
  default-language:    Haskell2010

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
