name:                rasa-ext-views
version:             0.1.3
synopsis:            Rasa Ext managing rendering views
description:         Rasa Ext managing rendering views
homepage:            https://github.com/ChrisPenner/rasa/
license:             GPL-3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Views
                       Rasa.Ext.Views.Internal.BiTree
                       Rasa.Ext.Views.Internal.Views
                       Rasa.Ext.Views.Internal.Actions
                       Rasa.Ext.Views.Internal.Widgets
                       Rasa.Ext.Views.Internal.LineNumbers
                       Rasa.Ext.Views.Internal.ActiveBar
                       Rasa.Ext.Views.Internal.AnyRenderable
                       Rasa.Ext.Views.Internal.StatusBar

  build-depends:       base >= 4.8 && < 5
                     , rasa
                     , lens
                     , data-default
                     , bifunctors
                     , recursion-schemes
                     , mtl
                     , yi-rope
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
