name:                rasa-ext-vim
version:             0.1.0.0
synopsis:            Rasa Ext for vim bindings
description:         Rasa Ext for vim bindings
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Vim
  build-depends:       base >= 4.7 && < 5
                     , rasa
                     , rasa-ext-files
                     , rasa-ext-cursors
                     , rasa-ext-status-bar
                     , text
                     , yi-rope
                     , text-lens
                     , data-default
                     , lens
                     , mtl
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
