name:                rasa-ext-vim
version:             0.1.6
synopsis:            Rasa Ext for vim bindings
description:         Rasa Ext for vim bindings
homepage:            https://github.com/ChrisPenner/rasa/
license:             GPL-3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rasa.Ext.Vim
  build-depends:       base >= 4.8 && < 5
                     , rasa
                     , rasa-ext-files
                     , rasa-ext-views
                     , rasa-ext-cursors
                     , text
                     , yi-rope
                     , text-lens
                     , data-default
                     , lens
                     , mtl
  default-language:    Haskell2010

  default-extensions:

  ghc-options:         -Wall

test-suite rasa-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rasa-ext-vim
                     , hspec
  other-modules:
                       Rasa.Ext.VimSpec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
