name:                rasa-vty
version:             0.1.0.0
synopsis:            Rasa adapter for rendering to terminal with vty
description:         Rasa adapter for rendering to terminal with vty
homepage:            https://github.com/ChrisPenner/rasa/
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Extension
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa.Adapters.Vty
                       Rasa.Adapters.Vty.Render

  build-depends:       base >= 4.7 && < 5
                     , rasa-core
                     , rasa-ext
                     , text
                     , lens
                     , vty >= 5.14
                     , transformers
  default-language:    Haskell2010

  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
