name:                rasa
version:             0.1.0.0
synopsis:            A modular text editor
description:         A modular text editor
homepage:            https://github.com/ChrisPenner/rasa#readme
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Text Editor
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa

                       Rasa.Ext

                       Rasa.Internal.Action
                       Rasa.Internal.Buffer
                       Rasa.Internal.Directive
                       Rasa.Internal.Editor
                       Rasa.Internal.Events
                       Rasa.Internal.Extensions
                       Rasa.Internal.Range
                       Rasa.Internal.Scheduler
                       Rasa.Internal.Text

  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , data-default
                     , lens
                     , mtl
                     , text
                     , text-lens
                     , transformers
                     , yi-rope

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
