name:                rasa
version:             0.1.0.0
synopsis:            A modular text editor
homepage:            https://github.com/ChrisPenner/rasa#readme
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Text Editor, Executable
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
description:         A modular text editor
  This is only a snippet, see the project's <https://github.com/ChrisPenner/rasa README>.
  .
  Rasa is a text editor project with a few interesting goals. For better or worse it attempts
  to be as modular as possible. This means that most functionality which would typically be considered to be 'core' in other editors
  is implemented as extensions in Rasa.
  This approach comes with its own share of pros and cons, for instance:
  .
  /Pros/
  .
  * Implementing most core functionality as extensions ensures a powerful and elegant extension interface.
  * Flexibility; don't like the default cursor implementation? Write your own!
  * Adaptability; the core of Rasa is miniscule, you can mix and match extensions to build any editor you want.
  .
  /Cons/
  .
  * Module cross-dependencies makes the community infrastructure more fragile; We'll likely have to develop a solution to this as a community as time goes on.
  * Fragmentation; Not having a single implementation for a given feature means extensions that depend on a feature have to pick a specific implementation to augment. Over time data-structures and types will be standardized into Rasa's core to help alleviate this.
  .
  While highly experimental, I've found the current API to be quite expressive and adaptable; 
  for instance I was able to implement the notion of multiple cursors using the extension API in less than a day. I hope to keep the learning curve low as development continues.
  .
  /Getting Started/
  .
  First clone the <https://github.com/ChrisPenner/rasa Github repo>
  and try running the example-config included there. 
  Once you get it running (see the <https://github.com/ChrisPenner/rasa/blob/master/README.md README>) then you
  can customize your keymap to add a few mappings you like. 
  Then I'd check out the 
  <https://github.com/ChrisPenner/rasa/blob/master/docs/Building-An-Extension.md Building your own extensions guide>.
  It goes in depth into everything you'd want to know!
  .
  If you have any issues (and I'm sure there'll be a few; it's a new project!) please report them <https://github.com/ChrisPenner/rasa/issues here> and we'll talk about it!

library
  hs-source-dirs:      src
  exposed-modules:
                       Rasa

                       Rasa.Ext

                       Rasa.Internal.Action
                       Rasa.Internal.Buffer
                       Rasa.Internal.Directive
                       Rasa.Internal.Editor
                       Rasa.Internal.Events
                       Rasa.Internal.Extensions
                       Rasa.Internal.Range
                       Rasa.Internal.Scheduler
                       Rasa.Internal.Text

  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , async
                     , containers
                     , data-default
                     , lens
                     , mtl
                     , text
                     , text-lens
                     , transformers
                     , yi-rope

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
