name:                text-lens
version:             0.1.0.0
synopsis:            Lenses for operating over text
description:         Lenses for operating over text
homepage:            https://github.com/ChrisPenner/rasa
license:             MIT
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2016 Chris Penner
category:            Lens
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library 
  hs-source-dirs:      src
  exposed-modules:
                       Control.Lens.Text

  build-depends:       base >= 4.7 && < 5
                     , text
                     , lens
                     , extra
  default-language:    Haskell2010

  default-extensions:  OverloadedStrings

  ghc-options:         -Wall

test-suite text-lens-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , text-lens
                     , hspec
                     , lens
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/rasa
